res/examples/invalid/fn_expr_mismatch_return_infix.eg
(): () => {
    type Int = number;
    let a: Int = 5;
    a + 10
};

// out: TypeError: mismatched types: expected type `()` but received `number`